trunk/Archive2/11/b6e9730d57f5ea/output
main.cpp:9:46: error: 'i' is a private member of 'enclose::nested'
    static int get_nested() {return nested{}.i;}
                                             ^
main.cpp:6:13: note: implicitly declared private here
        int i = 1337;  
            ^
1 error generated.
